--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ project(Lab5)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Lab5 main.cpp domain/entity.cpp domain/entity.h domain/repo.cpp domain/repo.h domain/homemade_vector.cpp domain/homemade_vector.h)
+add_executable(Lab5 main.cpp domain/entity.cpp domain/entity.h repo/repo.cpp repo/repo.h domain/homemade_vector.cpp domain/homemade_vector.h service/service.cpp service/service.h ui/UI.cpp ui/UI.h)
 
-add_executable(Lab5Vector main_vector.cpp domain/entity.cpp domain/entity.h domain/repo.cpp domain/repo.h domain/homemade_vector.cpp domain/homemade_vector.h)
+add_executable(Lab5Vector main_vector.cpp domain/entity.cpp domain/entity.h repo/repo.cpp repo/repo.h domain/homemade_vector.cpp domain/homemade_vector.h)
 
-add_executable(Lab5Ref main_reference.cpp domain/entity.cpp domain/entity.h domain/repo.cpp domain/repo.h domain/homemade_vector.cpp domain/homemade_vector.h)
+add_executable(Lab5Ref main_reference.cpp domain/entity.cpp domain/entity.h repo/repo.cpp repo/repo.h domain/homemade_vector.cpp domain/homemade_vector.h)
